// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkAnalysisReportRow render 1`] = `
<tr>
  <td>
    Optimization analysis report
  </td>
  <td>
    <select
      className="form-control form-control-sm"
      onChange={[Function]}
      value="csv"
    >
      <option
        key="csv"
        value="csv"
      >
        csv
      </option>
      <option
        key="json"
        value="json"
      >
        json
      </option>
      <option
        key="xls"
        value="xls"
      >
        xls
      </option>
    </select>
  </td>
  <td
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <a
      className="btn btn-sm btn-light"
      download={true}
      href="/service-download-file/2019-05-08_optimization_analysis_report.csv/v2/report-extended/287/100.csv"
    >
      <i
        className="fa fa-download"
      />
       Download
    </a>
  </td>
</tr>
`;

exports[`When modal is hidden 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th>
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When modal is initially hidden and then shown 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th>
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When modal is initially hidden and then shown 2`] = `
<div
  className="modal fade show"
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th>
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When modal is shown 1`] = `
<div
  className="modal fade show"
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "block",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th>
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When reports metadata is defined 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th>
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody>
            <NetworkAnalysisReportRow
              displayName="Optimization Analysis"
              key="0"
              mediaTypes={
                Array [
                  "csv",
                  "json",
                  "xls",
                ]
              }
              planId={100}
              reportId={4}
              reportName="optimization_analysis"
            />
          </tbody>
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`When reports metadata is null 1`] = `
<div
  className="modal fade "
  id="modalNetworkAnalysisReports"
  role="dialog"
  style={
    Object {
      "display": "none",
    }
  }
>
  <div
    className="modal-dialog"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          Network Analysis Reports
        </h4>
        <button
          className="close"
          id="btnHeaderHideReportModal"
          onClick={[Function]}
          type="button"
        >
          ×
        </button>
      </div>
      <div
        className="modal-body"
      >
        <table
          className="table table-sm table-striped"
        >
          <thead>
            <tr>
              <th>
                Report
              </th>
              <th>
                Format
              </th>
              <th />
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-light"
          id="btnHideReportModal"
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
      </div>
    </div>
  </div>
</div>
`;
